<resources>
    <!--App name -->
    <string name="app_name">Student App</string>
    <string name="app_main_name">BGCTUB Transport Tracking App</string>

    <!--Tips Text -->
    <string name="tip0_text">Please, keep on your phone\'s internet connection and location.</string>
    <string name="tip2text">Please, refrain from using mobile phones while crossing the road and while walking. </string>
    <string name="tip1text">Please, look both ways before cross the road. </string>
    <string name="tip3text">Please, try to walk on the right-hand side of the road.  </string>

    <!-- Activity label-->
    <string name="signinActivityTitle">Student App: Sign In</string>
    <string name="signupActivityTitle">Student App: Sign Up</string>
    <string name="forgetPassActivityTitle">Forgot Password</string>
    <string name="tipsActivitytitle">Student App: Tips</string>
    <string name="activity_settings_title">Settings</string>
    <string name="newsAndUpdateTitle">News and Update</string>
    <string name="changePassActivityTitle">Account Settings</string>
    <string name="DeleteAccountActivityTitle">Account Settings</string>
    <string name="help_activity_title">Help</string>


    <string name="snackbar_message">Please, turn on your phone\'s location.</string>
    <string name="off_location_snackbar_message">Please, turn on your phone\'s location.</string>
    <string name="off_location_internet_snackbar_message">Please, turn on your phone\'s internet connection and location.</string>
    <string name="off_internet_message">Please, turn on your phone\'s internet connection.</string>
    <string name="notification_text">Please, keep on your phone\'s internet connection and location. Click here for vehicle information.</string>
    <string name="title_activity_app_main">AppMainActivity</string>
    <string name="forgetPassInfoMsg">Please, check your email. We sent an email with password recovery link. </string>
    <string name="verify_account_info_msg">Registration successful. Please, check your email to verify your account and sign in. We sent an email with verification link.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="settings_menu_text">Settings</string>
    <string name="exit_menu_text">Exit</string>
    <string name="logout_menu_text">Logout</string>
    <string name="reload_menu_text">Reload</string>
    <string name="news_and_update_menu_text">News and Update</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_report">Report and Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_trans_info">Transport Information</string>
    <string name="ProfileUpdateActivityTitle">My Profile</string>
    <string name="trans_info_details_activity_title">Transport Information</string>
    <string name="title_activity_maps">Transport Location</string>
    <string name="title_activity_maps_all_vehicle">Map</string>
    <string name="resend_ver_email_message_req">Dear user, your email is not verified. We sent an email with verification link when you registered. If this link not working or you face other problems please choose confirm button to send email again.</string>
    <string name="resend_ver_email_message_success">Sent email successfully . Please check your email to verify your account and sign in. We sent again an email with verification link.</string>
    <string name="sign_in_help_text">Enter your account email and password to sign in. If you forget the password, click on the "forgot password?" option.</string>
    <string name="help_text_signup">Enter a valid email and at least 6 character password to sign up. You will receive an email with an email verification link as soon as the sign up is complete.</string>
    <string name="forgot_pass_help">Enter your account email to reset password. We will send an email with password reset link.</string>
    <string name="homeHelptext1">How many buses are active now, you can see from here. To see the real time locations of active buses click the location button.</string>
    <string name="HomeHelpText2">University buses marker is green bus icon. Red marker icon is your current location. Click the marker to open information window. For more information click the information window.</string>
    <string name="transport_info_help_text">To see bus list click \'Transport Information\' option from navigation bar. Click on bus information summary to see details information of specific bus. You can see also current location of specific bus from here.</string>
    <string name="report_feedback_helptext">To give feedback or report choose \'Report and Feedback\' option from navigation bar. Give a title of your report or feedback and enter details information about your report or feedback.</string>
    <string name="blog_link">https://bgctubtransporttrackingapp.blogspot.com</string>


</resources>