<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    tools:context=".ui.help.HelpFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#F8FBFB"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- Header & Edit option -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">


                <TextView
                    android:id="@+id/nav_transport_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="Help"
                    android:textColor="#0C0C0C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/transInfo_View_edit_imgBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F8FBFB"
                    android:src="@drawable/ic_action_help" />

            </LinearLayout>
            <!-- prequisite header -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="left"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:src="@android:drawable/btn_star"
                    app:tint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip0_text"
                    android:textColor="#0c0c0c"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <!-- sign in help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/signin"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/sign_in_help_text"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!-- forgot pass help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/forgetpass"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/forgot_pass_help"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />


            <!-- sign up help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/signup"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/help_text_signup"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />




            <!-- sign up help-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home &amp; All Buses Locations"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/homeHelptext1"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/map_window_info" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/map_info_click" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/HomeHelpText2"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />



            <!-- Transport info-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Transport Information"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/bus_list" />
            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/singel_info_bus" />
            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/single_info_map" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/transport_info_help_text"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />



            <!-- Report and feedback info-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report &amp; feedback"
                android:textColor="#0c0c0c"
                android:textSize="18sp"
                android:layout_marginVertical="10dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="195dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/report" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/report_feedback_helptext"
                android:layout_marginVertical="5dp"
                android:textColor="#0c0c0c"
                android:textSize="16sp"
                android:textStyle="bold" />







            <!-- bottom nav app name-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingTop="10dp"
                android:text="@string/app_name"
                android:textColor="#0c0c0c"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingBottom="10dp"
                android:text="@string/app_main_name"
                android:textColor="#0c0c0c"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>